test/files/pos/t4052.scala
package object test {
  trait PackageError
  object PackageError
}

