test/files/neg/macro-deprecate-idents/Macros_Trait_9.scala
object Test9 {
  trait macro
}
